--- a/GameStore/GameStore.WebUI/Views/Admin/Edit.cshtml
+++ b/GameStore/GameStore.WebUI/Views/Admin/Edit.cshtml
@@ -12,7 +12,7 @@
         <h3>Редактирование игры «@Model.Name»</h3>
     </div>
 
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Edit", "Admin"))
     {
         <div class="panel-body">
             @Html.HiddenFor(m => m.GameId)
@@ -25,12 +25,12 @@
                         @if (property.PropertyName == "Description")
                         {
                             @Html.TextArea(property.PropertyName, null,
-                                     new { @class = "form-control", rows = 5 })
+                                          new { @class = "form-control", rows = 5 })
                         }
                         else
                         {
                             @Html.TextBox(property.PropertyName, null,
-                                     new { @class = "form-control" })
+                                          new { @class = "form-control" })
                         }
                         @Html.ValidationMessage(property.PropertyName)
                     </div>
